# caramelbot

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: database.py  engine.py  skill_loader.py
app/tools/: playwright.py  telegram.py
assets/: architecture.excalidraw
skills/: emitir_nota.md
